--- a/main.css
+++ b/main.css
@@ -2,21 +2,104 @@
 	  color: yellow;
 }
 .contact{
+  position: absolute;
+  top: 5px;
+  right: 0;
+  width: 200px;
+  height: 100px;
+
+/*
 	margin-top: -60px;
-	margin-left: 1300px;
-	/*float:right;*/
+	right: : 0px;
+	*/
 }
 .about{
 	width:50px;
-	color: white;	
+	color: white;
+	font-size: 1.5vw;	
 }
 .example{
 	margin-top: 80px;
 	text-align: center;
 }
 .para{
-	font-size: 20px;
+	font-size: 1.5vw;
 	font-family:Courier New;
 
 }
+.card{
+	position:relative;
+	  max-width: 400px;
 
+
+}
+.card-deck{
+	position:relative;
+	left:100px;
+	/*top:150px;*/
+}
+input {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+}
+
+/* Style the submit button */
+input[type=submit] {
+  background-color:	#00BFFF;
+  color: white;
+}
+
+/* Style the container for inputs */
+/*.container {
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+*/
+/* The message box is shown when the user clicks on the password field */
+#message {
+  display:none;
+  background: #f1f1f1;
+  color: #000;
+  position: relative;
+  padding: 20px;
+  margin-top: 10px;
+}
+
+#message p {
+  padding: 10px 35px;
+  font-size: 18px;
+}
+
+/* Add a green text color and a checkmark when the requirements are right */
+.valid {
+  color: green;
+}
+
+.valid:before {
+  position: relative;
+  left: -35px;
+  content: "✔";
+}
+
+/* Add a red text color and an "x" when the requirements are wrong */
+.invalid {
+  color: red;
+}
+
+.invalid:before {
+  position: relative;
+  left: -35px;
+  content: "✖";
+}
+.signup{
+	padding: 5px;
+	border-style: solid;
+}
+.card{
+	width: 18rem;
+}
